--- a/src/styles/products.css
+++ b/src/styles/products.css
@@ -22,7 +22,7 @@
 
 /* ================== PRODUCT TABLE ================== */
 .product-table-wrapper {
-  padding: 20px;
+  /* padding: 10px; */
   background-color: white;
   max-height: 70vh;
   overflow-y: auto;
