--- a/src/styles/Caroussel.css
+++ b/src/styles/Caroussel.css
@@ -6,7 +6,7 @@
   width: 100%;
   overflow: hidden;
   text-align: center;
-  height: 100vh;
+  /* height: 95vh; */
 }
 
 /* =========================
