--- a/src/styles/Caroussel.css
+++ b/src/styles/Caroussel.css
@@ -19,10 +19,12 @@
 
 .carousel-slide img {
   width: 100%;
-  height: 900px;
+  height: 100%;
+  max-height: 100vh;
   object-fit: cover;
-  border-radius: 8px;
+  display: block;
 }
+
 .carousel-slide.active img {
   animation: zoomSlide 8s linear forwards;
 }
@@ -271,7 +273,7 @@
   .carousel-slide img {
     width: 100%;
     aspect-ratio: 16 / 9;
-    max-height: 240px;
+    max-height: 95vh;
     border-radius: 0;
     object-fit: cover;
     border-radius: 20px;
